src/objects/cadmus_core__Doc_Config__c.object
<CustomObject>
    <fields>
        <fullName>cadmus_core__CustomerDocumentConfigId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>GUID</description>
        <externalId>true</externalId>
        <label>Customer Document Config Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cadmus_core__Delivery_option__c</fullName>
        <label>Delivery option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATTACHMENTS</fullName>
                </value>
                <value>
                    <fullName>ATTACHMENTS_OVERWRITE</fullName>
                </value>
                <value>
                    <fullName>FILES</fullName>
                    <default>true</default>
                    <label>FILES</label>
                </value>
                <value>
                    <fullName>FILES_OVERWRITE</fullName>
                </value>
                <value>
                    <fullName>FILES_ADD_VERSION</fullName>
                </value>
                <value>
                    <fullName>BASE64</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cadmus_core__Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Document_Title__c</fullName>
        <inlineHelpText>Mergefields can be used to construct a dynamic document title</inlineHelpText>
        <label>Document Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__RecordTypeDeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeDeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Use_Salesforce_Data_Formatting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data will not be transformed into PDF Butler data format but the Salesforce object model will be used. This saves processing as the data does not have to be transformed in PDF Butler format which would mean that we have to run through all records. This time it takes for looping through the records and formatting is now saved!</inlineHelpText>
        <label>Use Salesforce Data Formatting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cadmus_core__View_Customer_DocConfig_Id__c</fullName>
        <formula>cadmus_core__CustomerDocumentConfigId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Customer DocConfig Id</label>
        <type>Text</type>
    </fields>
    <label>Doc Config</label>
    <listViews>
        <fullName>cadmus_core__All</fullName>
        <columns>NAME</columns>
        <columns>cadmus_core__Document_Title__c</columns>
        <columns>cadmus_core__CustomerDocumentConfigId__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>cadmus_core__Main_Doc_Configs</fullName>
        <columns>NAME</columns>
        <columns>cadmus_core__Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Main Doc Configs</label>
    </listViews>
    <nameField>
        <label>Document Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Configs</pluralLabel>
    <recordTypes>
        <fullName>cadmus_core__CSV</fullName>
        <active>true</active>
        <description>Create CSV files directly from Salesforce data</description>
        <label>Character-separated values (CSV)</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__EMAIL</fullName>
        <active>true</active>
        <description>Creates an email from your MS Word document and sent it via SFDC</description>
        <label>EMAIL</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__MAIN</fullName>
        <active>true</active>
        <description>Main document that can include multiple templates.</description>
        <label>Main Word Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__MAIN_PPTX</fullName>
        <active>true</active>
        <label>Main Powerpoint Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__MAIN_XLSX</fullName>
        <active>true</active>
        <description>Main Excel document</description>
        <label>Main Excel Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__PDF</fullName>
        <active>true</active>
        <description>Add Static PDF documents</description>
        <label>Static PDF</label>
    </recordTypes>
    <recordTypes>
        <fullName>cadmus_core__TEMPLATE</fullName>
        <active>true</active>
        <description>Partial document that can be used on a &apos;Main Word Document&apos;</description>
        <label>Template Word Document</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cadmus_core__RecordTypeCannotBeNull</fullName>
        <active>true</active>
        <errorConditionFormula>RecordTypeId = null</errorConditionFormula>
        <errorMessage>Please select a valid RecordType. If none are presented, make sure you have done step 1 and 2 of the &quot;Get Started&quot; tab. The permissions on the Doc Config SObject are not correct and you must grant access to the Record Types.</errorMessage>
    </validationRules>
</CustomObject>